--- a/GhettoStation/ToDo.txt
+++ b/GhettoStation/ToDo.txt
@@ -3,6 +3,8 @@
 - (done) add servos test 
 - add Multiwii protocol queries ( Active mode )
 - smooth/ease servos
+- handle compass on the tracker to remove calibration.
+- handle a GPS on the tracker to manage a mobile tracker.
 - remove all Strings stuff & replace them with char[] ( will free some memory )
 - add a deadband margin before inverting pan/tilt servo on 180/180 config.
 - stop tracking when UAV/home distance is <10m
