--- a/GhettoStation/ToDo.txt
+++ b/GhettoStation/ToDo.txt
@@ -1,14 +1,18 @@
+- (done) add servos test 
+- (done)stop tracking when UAV/home distance is <10m
 - add credits
 - configure Baudrate from menu
-- (done) add servos test 
 - add Multiwii protocol queries ( Active mode )
+- unify different protocol as libs with same code structure.
+- add FrSky protocol
+- add MavLink protocol
+- add raw NMEA protocol
 - smooth/ease servos
 - handle compass on the tracker to remove calibration.
-- handle a GPS on the tracker to manage a mobile tracker.
+- handle a GPS  to manage a mobile tracker.
 - add Eosbandi GPS filtering to smooth out gps positions.
 - remove all Strings stuff & replace them with char[] ( will free some memory )
 - add a deadband margin before inverting pan/tilt servo on 180/180 config.
-- stop tracking when UAV/home distance is <10m
 - for Mega boards only: Define all telemetry protocols at compile time 
   and autodetect it when running ( not enough memory on atmega 328 )
 - depending of memory, add some other telemetric values while flying ( flight time, voltage, flight mode, etc )
