--- a/GhettoStation/ToDo.txt
+++ b/GhettoStation/ToDo.txt
@@ -1,14 +1,13 @@
-- (done) add servos test 
-- (done)stop tracking when UAV/home distance is <10m
-- (done)configure Baudrate from menu
-- (done)add Multiwii protocol queries ( Active mode )
-- unify different protocol as libs with same code structure.
-- add FrSky protocol
-- (done) add MavLink protocol
-- add raw NMEA protocol
-- (done)handle compass on the tracker to remove calibration.
-- handle a GPS  to manage a mobile tracker.
-- remove all Strings stuff & replace them with char[] ( will free some memory )
-- add a deadband margin before inverting pan/tilt servo on 180/180 config.
-- depending of memory, add some other telemetric values while flying ( flight time, voltage, flight mode, etc )
-- add a voltage divider on the arduino and display current ground battery voltage, with alert when getting low.
+- battery gs display (adc)
+- video rssi display (adc)
+- buzzer alert
+- manual tilt
+- telemetry display: add screens
+- protocol: FrSky Hub
+- protocol: FrSky Smartport
+- protocol: raw NMEA & Ublox binary support
+- internal GPS support ( auto home config, & mobile tracker )
+- deadband margin before inverting pan/tilt servo on 180/180 config.
+- telemetry proxy (ie. forward serial uart1 to other uart in booth ways )
+
+
